[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Tutorial/Tutorial_Atk1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Tutorial/Tutorial_Spike_Wall.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Tutorial/TutorialPhaseClearArea.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 31, 0.2, 17 )

[node name="Tutorial_Spike_Wall" type="Spatial"]
script = ExtResource( 2 )

[node name="Spikes" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.2, 0, 0, 0 )

[node name="BottomSpikes" parent="Spikes" instance=ExtResource( 1 )]

[node name="TutorialPhaseClearArea" parent="Spikes/BottomSpikes" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 0, 0 )

[node name="CollisionShape" parent="Spikes/BottomSpikes/TutorialPhaseClearArea" index="0"]
shape = SubResource( 1 )

[node name="MidSpikes" parent="Spikes" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )

[node name="TopSpikes" parent="Spikes" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0 )

[connection signal="body_entered" from="Spikes/BottomSpikes/TutorialPhaseClearArea" to="." method="_on_TutorialPhaseClearArea_body_entered"]

[editable path="Spikes/BottomSpikes/TutorialPhaseClearArea"]
